fixed submenu spacing

--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -116,7 +116,6 @@
       text-align: center;
       @media(min-width:768px) {
         font-size: 16px;
-        margin-bottom: 35px;
       }
     }
     // p {
